# LegacyPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: LPP.cpp  LPP.h
src/Factory/: EditScreenFactory.cpp  EditScreenFactory.h
src/GUI/Dialogs/: SimpleDialog.cpp  SimpleDialog.h
src/GUI/Screens/: EditScreen.cpp  EditScreen.h  MainScreen.cpp  MainScreen.h
src/GUI/Screens/Edit/: EditScreen.cpp  EditScreen.h  FSEditScreen.cpp  FSEditScreen.h
src/GUI/Toolbars/: EditScreenMenuBar.cpp  EditScreenMenuBar.h
src/GUI/Widgets/: FileListWidget.cpp  FileListWidget.h
src/GUI/Windows/: MainWindow.cpp  MainWindow.h
src/IO/: FileType.h
src/Resources/: resource.rc
